loading time redeuse

--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
                 }
             }
 
+            fetchAndUpdateData();
+            fetchBatteryPercent();
+
             // Fetch data every 15 seconds
             setInterval(() => {
                 fetchAndUpdateData();
