--- a/history.html
+++ b/history.html
@@ -6,9 +6,46 @@
     <title>Historical Data - Server Room Monitor</title>
     <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+    <style>
+        /* Ensure the main container is responsive */
+        main {
+            padding: 16px;
+            max-width: 100%;
+            overflow-x: auto; /* Allow horizontal scrolling */
+        }
+
+        /* Style for the chart containers */
+        section {
+            overflow: hidden;
+        }
+
+        section .relative {
+            width: 100%;
+            min-width: 600px; /* Prevent shrinking too much */
+        }
+
+        /* Responsive design for mobile screens */
+        @media (max-width: 768px) {
+            .relative {
+                min-width: 300px; /* Adjust for smaller screens */
+            }
+        }
+    </style>
 </head>
 <body class="bg-gray-100">
+    
+    <!-- Battery -->
+    <div class="battery-indicator-container flex justify-end items-center pr-4 bg-gray-100">
+        <span class="mr-3 font-semibold">Battery</span>
+        <div class="battery-icon">
+            <div id="battery-level" class="battery-level h-full"></div>
+            <div class="battery-tip"></div>
+        </div>
+        <span id="battery-percentage" class="ml-2 text-gray-700 text-sm">- %</span>
+    </div>
+
     <header class="bg-blue-600 p-4 text-white text-center">
         <h1 class="text-2xl font-bold">Historical Data - Server Room Monitor</h1>
     </header>
@@ -21,24 +58,30 @@
         <!-- Temperature Graph -->
         <section class="bg-white rounded-lg p-6 shadow mb-8">
             <h2 class="text-xl font-semibold mb-4">Temperature Data</h2>
-            <div class="relative h-64 w-full">
-                <canvas id="temperatureChart"></canvas>
+            <div class="overflow-x-auto">
+                <div class="relative h-64 w-full">
+                    <canvas id="temperatureChart"></canvas>
+                </div>
             </div>
         </section>
 
         <!-- Humidity Graph -->
         <section class="bg-white rounded-lg p-6 shadow mb-8">
             <h2 class="text-xl font-semibold mb-4">Humidity Data</h2>
-            <div class="relative h-64 w-full">
-                <canvas id="humidityChart"></canvas>
+            <div class="overflow-x-auto">
+                <div class="relative h-64 w-full">
+                    <canvas id="humidityChart"></canvas>
+                </div>
             </div>
         </section>
 
         <!-- Gas Graph -->
         <section class="bg-white rounded-lg p-6 shadow mb-8">
             <h2 class="text-xl font-semibold mb-4">Gas Data</h2>
-            <div class="relative h-64 w-full">
-                <canvas id="gasChart"></canvas>
+            <div class="overflow-x-auto">
+                <div class="relative h-64 w-full">
+                    <canvas id="gasChart"></canvas>
+                </div>
             </div>
         </section>
     </main>
@@ -47,6 +90,7 @@
         <p>&copy; 2024 IOT Assignment | Group A</p>
     </footer>
 
+    <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", async () => {
