--- a/raw-data.html
+++ b/raw-data.html
@@ -6,9 +6,21 @@
     <title>Raw Data - Server Room Monitor</title>
     <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   </head>
   <body class="bg-gray-100">
+
+    <!-- Battery -->
+    <div class="battery-indicator-container flex justify-end items-center pr-4 bg-gray-100">
+        <span class="mr-3 font-semibold">Battery</span>
+        <div class="battery-icon">
+            <div id="battery-level" class="battery-level h-full"></div>
+            <div class="battery-tip"></div>
+        </div>
+        <span id="battery-percentage" class="ml-2 text-gray-700 text-sm">- %</span>
+    </div>
+
     <header class="bg-blue-600 p-4 text-white text-center">
       <h1 class="text-2xl font-bold">Raw Data - Server Room Monitor</h1>
     </header>
@@ -45,6 +57,8 @@
       <p>&copy; 2024 IOT Assignment | Group A</p>
     </footer>
 
+    
+    <script src="js/main.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const apiUrl = "https://api.thingspeak.com/channels/2733531/feeds.json?api_key=EOLMMSM5C3LP7VA1";
