--- a/history.html
+++ b/history.html
@@ -36,6 +36,15 @@
 </head>
 <body class="bg-gray-100">
     
+    <!-- Install Popup -->
+    <div id="installPopup">
+        <p class="mb-4">Install this app for a better experience!</p>
+        <div class="flex justify-end">
+            <button id="installBtn">Install</button>
+            <button id="dismissBtn" class="ml-2 text-gray-600">Dismiss</button>
+        </div>
+    </div>
+
     <!-- Battery -->
     <div class="battery-indicator-container flex justify-end items-center pr-4 bg-gray-100">
         <span class="mr-3 font-semibold">Battery</span>
