--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         <meta http-equiv="Pragma" content="no-cache">
         <meta http-equiv="Expires" content="0">
+
         <title>Server Room Monitor</title>
         <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon" />
         <link rel="stylesheet" href="css/style.css">
         <link rel="manifest" href="manifest.json" />
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
         <meta name="theme-color" content="#3b82f6" />
+
+        <!-- Meta Description -->
+        <meta name="description" content="Monitor historical data for server room conditions including temperature, humidity, and gas levels in real time. Perfect for IoT server room management." />
+
+        <!-- Open Graph Metadata -->
+        <meta property="og:title" content="Server Room Monitor" />
+        <meta property="og:description" content="Monitor historical data for server room conditions including temperature, humidity, and gas levels in real time. Perfect for IoT server room management." />
+        <meta property="og:image" content="https://server-room-monitor.netlify.app/icons/logo-192x192.png" />
+        <meta property="og:url" content="https://server-room-monitor.netlify.app" />
+        <meta property="og:type" content="website" />
+        
+        <!-- Twitter Card Metadata -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Server Room Monitor" />
+        <meta name="twitter:image" content="https://server-room-monitor.netlify.app/icons/logo-192x192.png" />
+
     </head>
     <body class="bg-gray-100">
 
@@ -87,7 +104,7 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="js/main.js"></script>
+        <!-- <script src="js/main.js"></script> -->
         <script>
 
         const temperatureData = [];
