--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <!-- <script src="js/main.js"></script> -->
+        <script src="js/main.js"></script>
         <script>
 
         const temperatureData = [];
@@ -113,8 +113,8 @@
 
         document.addEventListener("DOMContentLoaded", () => {
 
-            if (Notification.permission !== "granted") {
-                Notification.requestPermission();
+            if ("Notification" in window && Notification.permission !== "granted") {
+                Notification.requestPermission().catch((error) => console.error("Notification permission error:", error));
             }
 
             //Intialize Chart.js
@@ -212,13 +212,15 @@
             }
             
             function sendNotification(message) {
-            if (Notification.permission === "granted") {
-                new Notification("Alert", {
-                    body: message,
-                    icon: 'icons/favicon.png'
-                });
+                if ("Notification" in window && Notification.permission === "granted") {
+                    new Notification("Alert", {
+                        body: message,
+                        icon: "icons/favicon.png",
+                    });
+                } else {
+                    alert(message); // Fallback for unsupported devices
+                }
             }
-        }
 
             function fetchBatteryPercent(){
 
